--- a/skins/songCard/default/style.css
+++ b/skins/songCard/default/style.css
@@ -1,49 +1,10 @@
-/*  =================
-    == REUSED TAGS ==
-    =================
-*/
-.hiddenFirstLeft {
-    animation: hiddenElementFirstLeft 3s;
-    transition: opacity 3s;
-    opacity: 0;
-}
-
-.hiddenFirstRight {
-    animation: hiddenElementFirstRight 3s;
-    transition: opacity 3s;
-    opacity: 0;
-}
-
-.hiddenSecond {
-    transition: opacity 2s;
-    opacity: 0;
-}
-
-.showFirst {
-    transition: opacity 2s;
-    opacity: 1 !important;
-}
-
-.showSecondLeft {
-    animation: showElementFirstLeft 3s;
-    transition: opacity 3s;
-    opacity: 1;
-}
-
-.showSecondRight {
-    animation: showElementFirstRight 3s;
-    transition: opacity 3s;
-    opacity: 1;
-}
-
-/*  =======================
-    == SONG INFO ELEMENT ==
-    =======================
-*/
+/* ===================
+   = SONG TAGS start =
+   =================== */
 #songCard {
     width: 650px;
     height: 140px;
-    margin: 3% 3% 3% 3%;
+    margin: 3% 3%;
 
     position: absolute;
 
@@ -54,16 +15,19 @@
 
     font-family: "walkway", Arial, serif;
     color: white;
-
-    transition: all .5s;
-
-    opacity: 0;
 }
 
-/*  ===============================
-    == SONG INFO / COVER ELEMENT ==
-    ===============================
-*/
+#songCard.top-left, #songCard.bottom-left {
+    flex-direction: row;
+}
+
+#songCard.top-right, #songCard.bottom-right {
+    flex-direction: row-reverse;
+}
+
+/* ==========================
+   = SONG TAGS/ Cover start =
+   ========================== */
 #cover {
     width: 140px;
     height: 140px;
@@ -81,25 +45,33 @@
 #ranked {
     width: 100%;
     height: 19px;
-    margin-top: 12.2%;
-    margin-right: -30%;
-
-    transform: rotate(45deg);
-    transform-origin: center;
+    margin: 50% -14%;
 
     background-color: rgba(130, 27, 214, 0.959);
 
     box-shadow: 0 -3px 3px rgba(130, 27, 214, 0.959), 0 3px 3px rgba(130, 27, 214, 0.959);
 
     text-align: center;
+}
 
+#songCard.top-left #ranked, #songCard.bottom-left #ranked {
+    transform: rotate(45deg);
+    transform-origin: right;
     float: right;
 }
 
-/*  ==============================
-    == SONG INFO / DATA ELEMENT ==
-    ==============================
-*/
+#songCard.top-right #ranked, #songCard.bottom-right #ranked {
+    transform: rotate(-45deg);
+    transform-origin: left;
+    float: left;
+}
+/* ========================
+   = SONG TAGS/ Cover end =
+   ======================== */
+
+/* =========================
+   = SONG TAGS/ Info start =
+   ========================= */
 #songData {
     width: 500px;
     height: 140px;
@@ -109,7 +81,6 @@
     justify-content: space-evenly;
 
     font-size: 25px;
-    -webkit-text-stroke: 0.1px black;
 }
 
 #songData p {
@@ -120,15 +91,29 @@
 
 #songNameSubName {
     display: flex;
-    flex-direction: row;
-
     line-height: 30px;
 }
 
-#title {
-    margin-right: 10px;
+#songCard.top-left #songNameSubName,
+#songCard.bottom-left #songNameSubName {
+    flex-direction: row;
+}
 
+#songCard.top-right #songNameSubName,
+#songCard.bottom-right #songNameSubName {
+    flex-direction: row-reverse;
+}
+
+#title {
     font-size: 30px;
+}
+
+#songCard.top-left #title, #songCard.bottom-left #title {
+    margin-right: 10px;
+}
+
+#songCard.top-right #title, #songCard.bottom-right #title {
+    margin-left: 10px;
 }
 
 #subTitle {
@@ -137,14 +122,25 @@
 
 #songAuthorMapper {
     display: flex;
-    flex-direction: row;
 
     font-size: 20px;
     line-height: 20px;
 }
 
-#mapper {
+#songCard.top-left #songAuthorMapper, #songCard.bottom-left #songAuthorMapper {
+    flex-direction: row;
+}
+
+#songCard.top-right #songAuthorMapper, #songCard.bottom-right #songAuthorMapper {
+    flex-direction: row-reverse;
+}
+
+#songCard.top-left #mapper, #songCard.bottom-left #mapper {
     margin-right: 10px;
+}
+
+#songCard.top-right #mapper, #songCard.bottom-right #mapper {
+    margin-left: 10px;
 }
 
 #mapper::before {
@@ -160,18 +156,32 @@
     margin-bottom: -10px;
 
     display: flex;
-    flex-direction: row;
 
     line-height: 25px;
 }
 
+#songCard.top-left #songDataInfo, #songCard.bottom-left #songDataInfo {
+    flex-direction: row;
+}
+
+#songCard.top-right #songDataInfo, #songCard.bottom-right #songDataInfo {
+    flex-direction: row-reverse;
+}
+
 #difficulty {
-    margin-right: 20px;
     padding: 0 10px 0 10px;
 
     font-size: 16px;
 
     border-radius: 2px;
+}
+
+#songCard.top-left #difficulty, #songCard.bottom-left #difficulty {
+    margin-right: 20px;
+}
+
+#songCard.top-right #difficulty, #songCard.bottom-right #difficulty {
+    margin-left: 20px;
 }
 
 #bsrKey {
@@ -187,13 +197,20 @@
     margin-top: 5px;
 
     display: flex;
-    flex-direction: row;
     align-items: flex-end;
     justify-content: space-around;
 }
 
+#songCard.top-left #songDataInfoBar, #songCard.bottom-left #songDataInfoBar {
+    flex-direction: row;
+}
+
+#songCard.top-right #songDataInfoBar, #songCard.bottom-right #songDataInfoBar {
+    flex-direction: row-reverse;
+}
+
 #songBarLength {
-    width: 82%;
+    width: 81%;
     height: 5px;
     bottom: 0;
 
@@ -205,7 +222,7 @@
     overflow: hidden;
 }
 
-#timeToBarLength {
+#timeToPercentage {
     background-color: rgba(221, 221, 221, 0.61);
 
     width: 0;
@@ -215,69 +232,70 @@
 }
 
 #accuracy {
-    width: 18%;
+    width: 19%;
     height: 24px;
 
     font-size: 26px;
     text-align: right;
 }
 
+#songCard.top-left #accuracy, #songCard.bottom-left #accuracy {
+    text-align: right;
+}
+
+#songCard.top-right #accuracy, #songCard.bottom-right #accuracy {
+    text-align: left;
+}
+
 #accuracy::after {
     content: "%";
 }
+/* =======================
+   = SONG TAGS/ Info end =
+   ======================= */
 
-/*  =========================================
-    == PLAYER CARD - SONG INFO / HIDE LEFT ==
-    =========================================
-*/
-@keyframes hiddenElementFirstLeft {
-    0% {
-        transform: none;
-    }
-
-    100% {
-        transform: translate(-100%);
-    }
+/* =============================
+   = ANIMATION AND STATE Start =
+   ============================= */
+/* Song Card Variables */
+#songCard {
+    --show: 500ms;
+    --hide: 500ms;
 }
 
-/*  =========================================
-    == PLAYER CARD - SONG INFO / SHOW LEFT ==
-    =========================================
-*/
-@keyframes showElementFirstLeft {
-    0% {
-        transform: translate(-100%);
-    }
-
-    100% {
-        transform: translate(0%);
-    }
+#songCard.top-right, #songCard.bottom-right {
+    --transitionSide: 500px;
 }
 
-/*  ==========================================
-    == PLAYER CARD - SONG INFO / HIDE RIGHT ==
-    ==========================================
-*/
-@keyframes hiddenElementFirstRight {
-    0% {
-        transform: none;
-    }
-
-    100% {
-        transform: translate(100%);
-    }
+#songCard.top-left, #songCard.bottom-left {
+    --transitionSide: -500px;
 }
 
-/*  ==========================================
-    == PLAYER CARD - SONG INFO / SHOW RIGHT ==
-    ==========================================
-*/
-@keyframes showElementFirstRight {
-    0% {
-        transform: translate(100%);
-    }
+/* Cover */
+#songCard #cover  {
+    transition:
+            opacity var(--show);
+}
 
-    100% {
-        transform: translate(0%);
-    }
+#songCard.hidden #cover  {
+    transition-delay: 500ms !important;
+    opacity: 0;
+    transition:
+            opacity var(--hide);
+}
+
+/* song Data */
+#songCard #songData {
+    transform: translate(0, 0);
+    transition:
+            opacity var(--show),
+            transform var(--show);
+}
+
+#songCard.hidden #songData {
+    transform: translate(var(--transitionSide), 0);
+    opacity: 0;
+    transition:
+            opacity var(--show),
+            transform var(--show);
 }
